apps/docs/src/styles/custom.css
@import url('./tokens.css');
@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

@font-face {
  font-display: block;
  font-family: Cubano;
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/Cubano.woff2') format('woff2');
}

:root {
  --sl-font: 'Inter';
  --hc-content-width: 844px;
  --hc-header-logo-font: var(--title-h4);
  --sl-color-bg: var(--color-beige-100);
  --sl-color-bg-nav: var(--color-beige-100)
  --sl-text-5xl: 3.5rem;
  --sl-sidebar-width: 360px;
  --sl-toc-width: 268px !important;
  --sl-nav-height: 65px;
  --toc-width: 300px;
  --content-max-width: 1522px;
}

* {
  box-sizing: border-box !important;
}

/* Style Resets */
a {
  color: var(--color-stone-950);
  text-decoration: none;
}


/* Components */

[hc-button] {
  align-items: center;
  background-color: transparent;
  border-radius: var(--radius-12);
  cursor: pointer;
  display: flex;
  font: var(--label-md);
  gap: var(--spacing-8);
  justify-content: center;
  min-height: 48px;
  padding-block: var(--spacing-8);
  padding-inline: var(--spacing-24);
  transition: all 150ms ease-out;

  &:focus-visible {
    outline: var(--color-beige-950) solid 2px;
    outline-offset: var(--spacing-2);
  }
  
  &[data-variant="primary"] {
    background-color: var(--color-stone-950);
    color: var(--color-beige-50);
  }

  &[data-variant="secondary"] {
    background-color: var(--color-linen-100);
    color: var(--color-stone-950);

    &:hover {
      background-color: color-mix(in srgb, var(--color-linen-950) 10%, transparent);
    }
  }
  
  &[data-variant="tertiary"] {
    background-color: transparent;
    color: var(--color-stone-950);
    
    &:hover {
      background-color: var(--color-linen-100);
    }
  }
}

button, a {
  background-color: transparent;
  border: none;

  &[data-variant='primary'] {
    background-color: var(--color-stone-950);
    color: var(--color-beige-50);
  }

  &[data-variant='secondary'] {
    background-color: var(--color-linen-100);
    color: var(--color-stone-950);
  }

  &[data-variant='tertiary'] {
    background-color: transparent;
    color: var(--color-stone-950);
  }
}


body > a {
  background-color: var(--color-beige-100);
  color: var(--color-stone-950);
}

.sidebar-pane {
  inset-block: 0
}

.sidebar-content {
  padding: 0;
}

html[data-has-hero] {
  .main-frame {
    padding: 0;
  }

  .sl-container {
    max-width: unset;
  }
}

button {
  border: none;
}


html:not([data-has-sidebar]) {
  /* --sl-content-width: 844px !important; */
}


@layer starlight.reset {
  body {
    --sl-color-text: var(--color-stone-950);
  }
}

body:not(:has(nav.sidebar + .main-frame)) {
  /* This applies only to the homepage */
  h1 {
    font: var(--title-h1);
    letter-spacing: var(--title-h1-spacing);
  }

  h2 {
    font: var(--title-h2);
    letter-spacing: var(--title-h2-spacing);
  }

  h3 {
    font: var(--title-h3);
    letter-spacing: var(--title-h3-spacing);
  }

  h4 {
    font: var(--title-h4);
    letter-spacing: var(--title-h4-spacing);
  }

  h5 {
    font: var(--title-h5);
    letter-spacing: var(--title-h5-spacing);
  }

  h6 {
    font: var(--title-h6);
    letter-spacing: var(--title-h6-spacing);
  }
}

/* Set the body's style in docs pages */
body:has(nav.sidebar + .main-frame) {
  --sl-color-bg: var(--color-beige-50);
}

nav.sidebar + .main-frame {
  --sl-nav-height: 0px;

  background-color: var(--color-beige-50);
}

[data-reka-popper-content-wrapper] {
  width: var(--reka-popper-anchor-width);
}

[data-has-sidebar] {
  --sl-text-h1: var(--sl-text-3xl);
  --sl-text-h2: var(--sl-text-2xl);
  --sl-text-h3: var(--sl-text-xl);
  --sl-text-h4: var(--sl-text-base);

  [huey-swatch-color] {
    margin-top: 0 !important;
  }

  a {
    text-decoration: underline;
  }

  .right-sidebar,
  .tab {
    a {
      text-decoration: none;
      
      &[aria-selected="true"] {
        --sl-tab-color-border: black;
      }
    }
  }

  .right-sidebar {
    a {
      &:hover {
        text-decoration: underline;
      }
    }
  }
  
  .pagination-links {
    a {
      background-color: var(--color-linen-100);
      box-shadow: none;
      color: var(--color-linen-9000);
      font-size: var(--sl-text-sm);
      text-decoration: none;
      transition: background 150ms ease-out;

      &:hover {
        background-color: var(--color-linen-200);
      }


      .link-title {
        color: var(--color-linen-950);
        font-size: var(--sl-text-lg);
      }
    }
  }
  

  .sl-markdown-content pre:not(:where(.not-content *)) {
    border: none;
    padding: 0;
  }

  .sl-markdown-content :not(pre) > code:not(:where(.not-content *)) {
    background-color: var(--color-linen-100);
    border: none;
    border-radius: var(--radius-4);
    color: var(--color-stone-900);
    font-size: 0.9em;
    padding: 0.1em 0.3em;
  }
}

mobile-starlight-toc {
  nav {
    background-color: var(--sl-color-bg);

    summary {
      .toggle {
        background-color: var(--color-beige-100);
        border-color: color-mix(in srgb, var(--color-linen-950) 10%, transparent 100%);
      }
    }
  }
}

starlight-menu-button {
  button {
    background-color: transparent;
    box-shadow: none;
  }
}

@media (width >= 72rem) {
  [data-has-sidebar][data-has-toc] .main-pane {
    width: min(
      calc(100vw - var(--sl-sidebar-width) - var(--toc-width)),
      calc(
        var(--content-max-width) - var(--sl-sidebar-width) - var(
            --toc-width
          )
      )
    );
  }
}

@media (width >= 72rem) {
  .right-sidebar-container {
    position: fixed;
    right: max(0px, calc(0px + ((100vw - var(--content-max-width)) / 2)));
    width: var(--toc-width);
  }
}

.right-sidebar {
  bottom: calc(var(--sp) * 3);
  height: 100%;
  padding: 0;
  top: calc(var(--Header-height) + var(--sp) * 3);
}

@media (width >= 72rem) {
  .right-sidebar-container .right-sidebar {
    width: var(--toc-width);
  }
}

@media (width >= 72rem) {
  .right-sidebar-container,
  .right-sidebar-container .right-sidebar {
    width: var(--toc-width);
  }

  .right-sidebar-container {
    position: fixed;
    right: max(0px, calc(0px + ((100vw - var(--content-max-width)) / 2)));
  }
}

section {
  width: 100%;

  &[data-size='boxed'] {
    margin: 0 auto;
    max-width: var(--hc-content-width);
  }

  &[data-size='wide'] {
    margin-inline: calc(var(--sl-nav-pad-x) * -1);
    padding-inline: 16px;
    width: calc(100% + clac(var(--sl-nav-pad-x) * 2));
  }
}

@media (width >= 72rem) {
  section {
    &[data-size='wide'] {
      padding-inline: 164px;
    }
  }
}

